
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 21a
   * in cycle/resconv/
     - copied _MUSCL to _MUSCL_test
   * in cycle/resconv/_MUSCL/resconv.c
     - got rid of face integration of F and replaced it with face integration of musclvars
       (face integration of F was problematic because it didn't preserve freestream on non-uniform
        meshes)


2019 FEB 20b
   * in bin
     - updated Noh3D.wrp


2019 FEB 20a
   * in model/share/fluid_share.c
     - added condition_Lambda_plus_minus_Parent4() -> significantly better than previous attempts


2019 FEB 19b
   * in cycle/resconv/_MUSCL/resconv.c
     - in write_disc_resconv_template(), changed the default for FACEINTEG to FACEINTEG_CENTRAL1
   * in model/metrics/_generic/metrics.c
     - added some comments


2019 FEB 19a
   * in model/metrics/_generic/metrics.c
     - added find_point_in_between_8_nodes()
     - renamed find_Omega_and_X_at_interface() to find_Omega_and_X_at_interface_old()
     - in find_Omega_and_X_at_interface(), changed the 3D metrics so that they preserve freestream
       perfectly independently of the skewness of the mesh (needs more testing)


2019 FEB 18a
   * in bin
     - deleted reentry2.wrp
     - deleted reentry3.wrp
     - added reentry_sheath.wrp


2019 FEB 17a
   * in model/metrics/doc/report.tex
     - added section related to new metrics that ensure freestream preservation in 3D


2019 FEB 16a
   * in bin
     - renamed standard test cases to standard names


2019 FEB 14b
   * in bin
     - modified taylor_green_vortex.wrp to latest version
     - renamed taylor_green_vortex.mcr to taylor_green_vortex_2.mcr 
     - renamed taylor_green_vortex.eqn to taylor_green_vortex_2.eqn 
     - added taylor_green_vortex.mcr which is to be used with taylor_green_vortex.wrp