@@ -7,6 +7,15 @@ CFDWARP CHANGELOG
 _____________________________________________________________________________________________________
 
 
+2019 FEB 21b
+   * in cycle/share/cycle_share.c
+     - added function update_linked_nodes_2() necessary to update the musclvars that are not
+       accessed through a dimensionally split stencil (such as the face integration algorithm in
+       _MUSCL)
+     - in update_linked_nodes(), call update_linked_nodes_2()
+     - in update_linked_nodes(), renamed gl->domain to zone.
+
+
 2019 FEB 21a
    * in cycle/resconv/
      - copied _MUSCL to _MUSCL_test
